1/26: finished multiple volume sliders, started fixing paging sliders, did some ui work

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -51,27 +51,27 @@
       <div class="card-content">
         <div id="slider" class="layout horizontal">
           <div id="custom_container"> 
-            <div class="custom one"> <input id="text1" readonly/> <div class="custom_slider" value={{"internalEqualizer"}}></div></div>
-            <div class="custom two"> <input id="text2" readonly/> <div class="custom_slider" value={{"equalizer2"}}></div></div>
-            <div class="custom three"> <input id="text3" readonly/> <div class="custom_slider" value={{"equalizer3"}}></div></div>
-            <div class="custom four"> <input id="text4" readonly/> <div class="custom_slider" value={{"equalizer4"}}></div></div>
-            <div class="custom five"> <input id="text5" readonly/> <div class="custom_slider" value={{"equalizer5"}}></div></div>
-            <div class="custom six"> <input id="text6" readonly/> <div class="custom_slider" value={{"equalizer6"}}></div></div>
-            <div class="custom seven"> <input id="text7" readonly/> <div class="custom_slider" value={{"equalizer7"}}></div></div>
-            <div class="custom eight"> <input id="text8" readonly/> <div class="custom_slider" value={{"equalizer8"}}></div></div>
-            <div class="custom nine"> <input id="text9" readonly/> <div class="custom_slider" value={{"equalizer9"}}></div></div>
-            <div class="custom ten"> <input id="text10" readonly/> <div class="custom_slider" value={{"equalizer10"}}></div></div>
-            <div class="custom eleven"> <input id="text11" readonly/> <div class="custom_slider" value={{"equalizer11"}}></div></div>
-            <div class="custom twelve"> <input id="text12" readonly/> <div class="custom_slider" value={{"equalizer12"}}></div></div>
-            <div class="custom thirteen"> <input id="text13" readonly/> <div class="custom_slider" value={{"equalizer13"}}></div></div>
-            <div class="custom fourteen"> <input id="text14" readonly/> <div class="custom_slider" value={{"equalizer14"}}></div></div>
-            <div class="custom fifteen"> <input id="text15" readonly/> <div class="custom_slider" value={{"equalizer15"}}></div></div>
-            <div class="custom sixteen"> <input id="text16" readonly/> <div class="custom_slider" value={{"equalizer16"}}></div></div>
-            <div class="custom seventeen"> <input id="text17" readonly/> <div class="custom_slider" value={{"equalizer17"}}></div></div>
-            <div class="custom eighteen"> <input id="text18" readonly/> <div class="custom_slider" value={{"equalizer18"}}></div></div>
-            <div class="custom nineteen"> <input id="text19" readonly/> <div class="custom_slider" value={{"equalizer19"}}></div></div>
-            <div class="custom twenty"> <input id="text20" readonly/> <div class="custom_slider" value={{"equalizer20"}}></div></div>
-            <div class="custom twentyone"> <input id="text21" readonly/> <div class="custom_slider" value={{"equalizer21"}></div></div>
+            <div class="custom one"> <input id="text1" readonly/> <div class="custom_slider" value={{"internalEqualizer"}}></div><input class="bands" value="80" readonly/></div>
+            <div class="custom two"> <input id="text2" readonly/> <div class="custom_slider" value={{"equalizer2"}}></div><input class="bands" value="100" readonly/></div>
+            <div class="custom three"> <input id="text3" readonly/> <div class="custom_slider" value={{"equalizer3"}}></div><input class="bands" value="125" readonly/></div>
+            <div class="custom four"> <input id="text4" readonly/><div class="custom_slider" value={{"equalizer4"}}></div><input class="bands" value="160" readonly/></div>
+            <div class="custom five"> <input id="text5" readonly/> <div class="custom_slider" value={{"equalizer5"}}></div><input class="bands" value="200" readonly/></div>
+            <div class="custom six"> <input id="text6" readonly/> <div class="custom_slider" value={{"equalizer6"}}></div><input class="bands" value="250" readonly/></div>
+            <div class="custom seven"> <input id="text7" readonly/> <div class="custom_slider" value={{"equalizer7"}}></div><input class="bands" value="315" readonly/></div>
+            <div class="custom eight"> <input id="text8" readonly/> <div class="custom_slider" value={{"equalizer8"}}></div><input class="bands" value="400" readonly/></div>
+            <div class="custom nine"> <input id="text9" readonly/> <div class="custom_slider" value={{"equalizer9"}}></div><input class="bands" value="500" readonly/></div>
+            <div class="custom ten"> <input id="text10" readonly/> <div class="custom_slider" value={{"equalizer10"}}></div><input class="bands" value="630" readonly/></div>
+            <div class="custom eleven"> <input id="text11" readonly/> <div class="custom_slider" value={{"equalizer11"}}></div><input class="bands" value="800" readonly/></div>
+            <div class="custom twelve"> <input id="text12" readonly/> <div class="custom_slider" value={{"equalizer12"}}></div><input class="bands" value="1k" readonly/></div>
+            <div class="custom thirteen"> <input id="text13" readonly/> <div class="custom_slider" value={{"equalizer13"}}></div><input class="bands" value="1.25k" readonly/></div>
+            <div class="custom fourteen"> <input id="text14" readonly/> <div class="custom_slider" value={{"equalizer14"}}></div><input class="bands" value="1.6k" readonly/></div>
+            <div class="custom fifteen"> <input id="text15" readonly/> <div class="custom_slider" value={{"equalizer15"}}></div><input class="bands" value="2k" readonly/></div>
+            <div class="custom sixteen"> <input id="text16" readonly/> <div class="custom_slider" value={{"equalizer16"}}></div><input class="bands" value="2.5k" readonly/></div>
+            <div class="custom seventeen"> <input id="text17" readonly/> <div class="custom_slider" value={{"equalizer17"}}></div><input class="bands" value="3.15k" readonly/></div>
+            <div class="custom eighteen"> <input id="text18" readonly/> <div class="custom_slider" value={{"equalizer18"}}></div><input class="bands" value="4k" readonly/></div>
+            <div class="custom nineteen"> <input id="text19" readonly/> <div class="custom_slider" value={{"equalizer19"}}></div><input class="bands" value="5k" readonly/></div>
+            <div class="custom twenty"> <input id="text20" readonly/> <div class="custom_slider" value={{"equalizer20"}}></div><input class="bands" value="6.3k" readonly/></div>
+            <div class="custom twentyone"> <input id="text21" readonly/> <div class="custom_slider" value={{"equalizer21"}></div><input class="bands" value="8k" readonly/></div>
           </div>
         </div>
       </div>
@@ -85,7 +85,6 @@
   <script>
   var iirConstants = [];
   for(loopVar = 0; loopVar < 21; loopVar++) { // watch out! we got a static over here
-    console.log("hi");
     iirConstants[loopVar] = 0;
   }
   console.log(iirConstants);
@@ -201,6 +200,11 @@
 
 // try this shit out mayne: http://jqueryrain.com/?MnbPPsmf
 
+    
+    // make the equalizer get the constants out to the database here
+
+    
+
     $(function() {
       $( ".custom.one > .custom_slider" ).slider({
         orientation: "vertical",
@@ -212,7 +216,7 @@
         slide: function( event, ui) {
           $( "#text1" ).val( ui.value);
           iirConstants[0] = ui.value;
-          console.log(iirConstants[0] + " - | - " + ui.value);
+          //console.log(iirConstants[0] + " - | - " + ui.value);    // remove all of these when finished with them
         }
       });
       $( ".custom.two > .custom_slider" ).slider({
@@ -224,7 +228,7 @@
         slide: function( event, ui) {
           $( "#text2" ).val( ui.value);
           iirConstants[1] = ui.value;
-          console.log(iirConstants[1] + " - | - " + ui.value);
+          //console.log(iirConstants[1] + " - | - " + ui.value);
         }
       });
       $( ".custom.three > .custom_slider" ).slider({
@@ -236,7 +240,7 @@
         slide: function( event, ui) {
           $( "#text3" ).val( ui.value);
           iirConstants[2] = ui.value;
-          console.log(iirConstants[2] + " - | - " + ui.value);
+          //console.log(iirConstants[2] + " - | - " + ui.value);
         }
       });
       $( ".custom.four > .custom_slider" ).slider({
@@ -248,7 +252,7 @@
         slide: function( event, ui) {
           $( "#text4" ).val( ui.value);
           iirConstants[3] = ui.value;
-          console.log(iirConstants[3] + " - | - " + ui.value);
+          //console.log(iirConstants[3] + " - | - " + ui.value);
         }
       });
       $( ".custom.five > .custom_slider" ).slider({
@@ -260,7 +264,7 @@
         slide: function( event, ui) {
           $( "#text5" ).val( ui.value);
           iirConstants[4] = ui.value;
-          console.log(iirConstants[4] + " - | - " + ui.value);
+          //console.log(iirConstants[4] + " - | - " + ui.value);
         }
       });
       $( ".custom.six > .custom_slider" ).slider({
@@ -272,7 +276,7 @@
         slide: function( event, ui) {
           $( "#text6" ).val( ui.value);
           iirConstants[5] = ui.value;
-          console.log(iirConstants[5] + " - | - " + ui.value);
+          //console.log(iirConstants[5] + " - | - " + ui.value);
         }
       });
       $( ".custom.seven > .custom_slider" ).slider({
@@ -284,7 +288,7 @@
         slide: function( event, ui) {
           $( "#text7" ).val( ui.value);
           iirConstants[6] = ui.value;
-          console.log(iirConstants[6] + " - | - " + ui.value);
+          //console.log(iirConstants[6] + " - | - " + ui.value);
         }
       });
       $( ".custom.eight > .custom_slider" ).slider({
@@ -296,7 +300,7 @@
         slide: function( event, ui) {
           $( "#text8" ).val( ui.value);
           iirConstants[7] = ui.value;
-          console.log(iirConstants[7] + " - | - " + ui.value);
+          //console.log(iirConstants[7] + " - | - " + ui.value);
         }
       });
       $( ".custom.nine > .custom_slider" ).slider({
@@ -308,7 +312,7 @@
         slide: function( event, ui) {
           $( "#text9" ).val( ui.value);
           iirConstants[8] = ui.value;
-          console.log(iirConstants[8] + " - | - " + ui.value);
+          //console.log(iirConstants[8] + " - | - " + ui.value);
         }
       });
       $( ".custom.ten > .custom_slider" ).slider({
@@ -320,7 +324,7 @@
         slide: function( event, ui) {
           $( "#text10" ).val( ui.value);
           iirConstants[9] = ui.value;
-          console.log(iirConstants[9] + " - | - " + ui.value);
+          //console.log(iirConstants[9] + " - | - " + ui.value);
         }
       });
       $( ".custom.eleven > .custom_slider" ).slider({
@@ -332,7 +336,7 @@
         slide: function( event, ui) {
           $( "#text11" ).val( ui.value);
           iirConstants[10] = ui.value;
-          console.log(iirConstants[10] + " - | - " + ui.value);
+          //console.log(iirConstants[10] + " - | - " + ui.value);
         }
       });
       $( ".custom.twelve > .custom_slider" ).slider({
@@ -344,7 +348,7 @@
         slide: function( event, ui) {
           $( "#text12" ).val( ui.value);
           iirConstants[11] = ui.value;
-          console.log(iirConstants[11] + " - | - " + ui.value);
+          //console.log(iirConstants[11] + " - | - " + ui.value);
         }
       });
       $( ".custom.thirteen > .custom_slider" ).slider({
@@ -356,7 +360,7 @@
         slide: function( event, ui) {
           $( "#text13" ).val( ui.value);
           iirConstants[12] = ui.value;
-          console.log(iirConstants[12] + " - | - " + ui.value);
+          //console.log(iirConstants[12] + " - | - " + ui.value);
         }
       });
       $( ".custom.fourteen > .custom_slider" ).slider({
@@ -368,7 +372,7 @@
         slide: function( event, ui) {
           $( "#text14" ).val( ui.value);
           iirConstants[13] = ui.value;
-          console.log(iirConstants[13] + " - | - " + ui.value);
+          //console.log(iirConstants[13] + " - | - " + ui.value);
         }
       });
       $( ".custom.fifteen > .custom_slider" ).slider({
@@ -380,7 +384,7 @@
         slide: function( event, ui) {
           $( "#textfifteen" ).val( ui.value);
           iirConstants[14] = ui.value;
-          console.log(iirConstants[14] + " - | - " + ui.value);
+          //console.log(iirConstants[14] + " - | - " + ui.value);
         }
       });
       $( ".custom.sixteen > .custom_slider" ).slider({
@@ -392,7 +396,7 @@
         slide: function( event, ui) {
           $( "#text16" ).val( ui.value);
           iirConstants[15] = ui.value;
-          console.log(iirConstants[15] + " - | - " + ui.value);
+          //console.log(iirConstants[15] + " - | - " + ui.value);
         }
       });
       $( ".custom.seventeen > .custom_slider" ).slider({
@@ -404,7 +408,7 @@
         slide: function( event, ui) {
           $( "#text17" ).val( ui.value);
           iirConstants[16] = ui.value;
-          console.log(iirConstants[16] + " - | - " + ui.value);
+          //console.log(iirConstants[16] + " - | - " + ui.value);
         }
       });
       $( ".custom.eighteen > .custom_slider" ).slider({
@@ -416,7 +420,7 @@
         slide: function( event, ui) {
           $( "#text18" ).val( ui.value);
           iirConstants[17] = ui.value;
-          console.log(iirConstants[17] + " - | - " + ui.value);
+          //console.log(iirConstants[17] + " - | - " + ui.value);
         }
       });
       $( ".custom.nineteen > .custom_slider" ).slider({
@@ -428,7 +432,7 @@
         slide: function( event, ui) {
           $( "#text19" ).val( ui.value);
           iirConstants[18] = ui.value;
-          console.log(iirConstants[18] + " - | - " + ui.value);
+          //console.log(iirConstants[18] + " - | - " + ui.value);
         }
       });
       $( ".custom.twenty > .custom_slider" ).slider({
@@ -440,7 +444,7 @@
         slide: function( event, ui) {
           $( "#text20" ).val( ui.value);
           iirConstants[19] = ui.value;
-          console.log(iirConstants[19] + " - | - " + ui.value);
+          //console.log(iirConstants[19] + " - | - " + ui.value);
         }
       });
       $( ".custom.twentyone > .custom_slider" ).slider({
@@ -452,7 +456,7 @@
         slide: function( event, ui) {
           $( "#text21" ).val( ui.value);
           iirConstants[20] = ui.value;
-          console.log(iirConstants[20] + " - | - " + ui.value);
+          //console.log(iirConstants[20] + " - | - " + ui.value);
         }
       });
 
