--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -50,11 +50,20 @@
 
         <h1 id="pagingvolume"> Paging Volume </h1>
 
-        <div id="slider2" class="layout horizontal">
+        <div id="slider3" class="layout horizontal">
           <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
           <paper-slider id="volume4" pin min="1" max="100" value="{{internalPagingVolume}}"></paper-slider>
           <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
         </div>
+
+        <h1 id="soundmaskingvolume"> Sound Masking Volume </h1>
+
+        <div id="slider4" class="layout horizontal">
+          <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
+          <paper-slider id="volume5" pin min="1" max="100" value="{{internalSoundMaskingVolume}}"></paper-slider>
+          <paper-icon-button icon="add" on-click="incrementVolume"></paper-icon-button>
+        </div>
+
       </div>
       <div class="card-actions">
         <paper-button on-click="_setVolumeClicked">set volume</paper-button>
@@ -138,7 +147,7 @@
       },*/
       
       _setVolumeClicked: function() {
-        this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume;
+        this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume + " " + this.internalSoundMaskingVolume;
         //this.musicVolume = this.internalVolume2;
         this.$.toast.show();
         console.log("_setVolumeClicked");
@@ -180,7 +189,7 @@
 
       ready: function() {
         this.internalVolume = this.volume;
-        console.log("I am ready " + this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume);
+        console.log("I am ready " + this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume) + " " + this.internalSoundMaskingVolume;
       }
     });
   </script>
