all this shit is working now. Adding the handler to retrieve information from the backend for the frontend

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -382,7 +382,7 @@
         max: 10,
         value: 0,
         slide: function( event, ui) {
-          $( "#textfifteen" ).val( ui.value);
+          $( "#text15" ).val( ui.value);
           iirConstants[14] = ui.value;
           //console.log(iirConstants[14] + " - | - " + ui.value);
         }
