--- a/software/src/omaha/templates/components/speaker-tooltip.html
+++ b/software/src/omaha/templates/components/speaker-tooltip.html
@@ -36,6 +36,7 @@
 
       _selectSpeaker: function() {
         this.fire('speakerselected', {speaker: this.speaker});
+        console.log(this.speaker)
       },
 
       _selectZone: function() {
